# nytautobrief

./: README.md  cronjob.py  gmail_interface.py  gmail_quickstart.py  main.py  message.txt  nyt_interface.py  pyproject.toml  run.sh
messages/: 4-12-2023.txt  test.txt
